Updated navbar with search bar animation and added section navigation

--- a/index.html
+++ b/index.html
@@ -24,21 +24,24 @@
                     <a href="#" class="link link-active">Home</a>
                 </li>
                 <li>
-                    <a href="#" class="link">Shop</a>
+                    <a href="#products" class="link">Shop</a>
                 </li>
                 <li>
-                    <a href="#" class="link">Page</a>
+                    <a href="#hero" class="link">Page</a>
                 </li>
                 <li>
-                    <a href="#" class="link">Blog</a>
+                    <a href="#blog" class="link">Blog</a>
                 </li>
                 <li>
-                    <a href="#" class="link">Contact</a>
+                    <a href="#newsletter" class="link">Contact</a>
                 </li>
                 <li class="nav-icons flex">
-                    <a href="#" class="icon ">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </a>
+                    <div class="search-container">
+                        <a href="#" class="icon search-icon">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </a>
+                        <input type="text" class="search-input" placeholder="Search...">
+                    </div>
                     <a href="#" class="icon">
                         <i class="fa-solid fa-user"></i>
                     </a>
@@ -56,7 +59,7 @@
     <!-- Sections Here -->
     <main>
         <!--Hero Section Here-->
-        <section class="hero ">
+        <section id="hero"  class="hero ">
             <div class="hero-content flex container">
                 <div>
                     <h3>Summer Fashion</h3>
@@ -89,7 +92,7 @@
             </div>
         </section>
         <!--NEW PRODUCT Section Here-->
-        <section class="section">
+        <section id ="products" class="section">
             <div class="container">
                 <h2>New Products</h2>
                 <div class="line"></div>
@@ -160,7 +163,7 @@
         </section>
 
         <!--Best Sale Section Here-->
-        <section class="section">
+        <section id="bestSale" class="section">
             <div class="container">
                 <h2>Best Sale</h2>
                 <div class="line"></div>
@@ -313,7 +316,7 @@
         </section>
 
         <!--New Latest/blog Section Here-->
-        <section class="section">
+        <section id="blog" class="section">
             <div class="container">
                 <h2>New Latest</h2>
                 <div class="line"></div>
@@ -358,7 +361,7 @@
         </section>
 
         <!--NewsLetter Section Here-->
-        <section class="section">
+        <section id="newsletter" class="section">
             <div class="secondary-bg">
                 <form class="container flex wrap ">
                     <h3>
