--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 Leather Black Handbag Out Edition
                             </p>
                             <div class="price">
-                                <span class="amount">$100.00</span>
+                                <span class="amount">₹100.00</span>
                             </div>
                             <button class="add-to-cart">Add to Cart</button>
                         </div>
@@ -117,7 +117,7 @@
                             </p>
                             <div class="price">
                                 <del>$150.00</del>
-                                <span class="amount">$100.00</span>
+                                <span class="amount">₹100.00</span>
                             </div>
                             <button class="add-to-cart">Add to Cart</button>
                         </div>
@@ -130,7 +130,7 @@
                             </p>
                             <div class="price">
 
-                                <span class="amount">$100.00</span>
+                                <span class="amount">₹100.00</span>
                             </div>
                             <button class="add-to-cart">Add to Cart</button>
                         </div>
@@ -143,7 +143,7 @@
                             </p>
                             <div class="price">
 
-                                <span class="amount">$100.00</span>
+                                <span class="amount">₹100.00</span>
                             </div>
                             <button class="add-to-cart">Add to Cart</button>
                         </div>
@@ -175,7 +175,7 @@
                                 Leather Black Handbag Out Edition
                             </p>
                             <div class="price">
-                                <span class="amount">$100.00</span>
+                                <span class="amount">₹100.00</span>
                             </div>
                             <button class="add-to-cart">Add to Cart</button>
                         </div>
@@ -188,7 +188,7 @@
                             </p>
                             <div class="price">
 
-                                <span class="amount">$100.00</span>
+                                <span class="amount">₹100.00</span>
                             </div>
                             <button class="add-to-cart">Add to Cart</button>
                         </div>
@@ -201,7 +201,7 @@
                             </p>
                             <div class="price">
 
-                                <span class="amount">$100.00</span>
+                                <span class="amount">₹100.00</span>
                             </div>
                             <button class="add-to-cart">Add to Cart</button>
                         </div>
@@ -213,8 +213,8 @@
                                 Leather Black Handbag Out Edition
                             </p>
                             <div class="price">
-                                <del>$500</del>
-                                <span class="amount">$100.00</span>
+                                <del>₹500</del>
+                                <span class="amount">₹100.00</span>
                             </div>
                             <button class="add-to-cart">Add to Cart</button>
                         </div>
@@ -226,8 +226,8 @@
                                 Leather Black Handbag Out Edition
                             </p>
                             <div class="price">
-                                <del>$1500</del>
-                                <span class="amount">$1000.00</span>
+                                <del>₹1500</del>
+                                <span class="amount">₹1000.00</span>
                             </div>
                             <button class="add-to-cart">Add to Cart</button>
                         </div>
@@ -240,7 +240,7 @@
                             </p>
                             <div class="price">
 
-                                <span class="amount">$100.00</span>
+                                <span class="amount">₹100.00</span>
                             </div>
                             <button class="add-to-cart">Add to Cart</button>
                         </div>
@@ -253,7 +253,7 @@
                             </p>
                             <div class="price">
 
-                                <span class="amount">$100.00</span>
+                                <span class="amount">₹100.00</span>
                             </div>
                             <button class="add-to-cart">Add to Cart</button>
                         </div>
@@ -265,8 +265,8 @@
                                 Leather Black Handbag Out Edition
                             </p>
                             <div class="price">
-                                <del>$1300</del>
-                                <span class="amount">$899.00</span>
+                                <del>₹1300</del>
+                                <span class="amount">₹899.00</span>
                             </div>
                             <button class="add-to-cart">Add to Cart</button>
                         </div>
@@ -284,7 +284,7 @@
                         <h5>
                             <a href="#">Free Shipping</a>
                         </h5>
-                        <p class="des">Free Shipping on Orders over $99</p>
+                        <p class="des">Free Shipping on Orders over ₹99</p>
                     </div>
 
                     <div class="box">
